merging dev into feature/HU-001